fix different scrollbars

--- a/dashmachine/static/css/global/dashmachine.css
+++ b/dashmachine/static/css/global/dashmachine.css
@@ -33,12 +33,12 @@
 }
 
 .scrollbar {
-    overflow-y: scroll !important;
+    overflow-y: auto !important;
     overflow-x: hidden !important;
 }
 .scrollbar-x {
-    overflow-y: scroll !important;
-    overflow-x: scroll !important;
+    overflow-y: auto !important;
+    overflow-x: auto !important;
 }
 
 /* ELEMENT STLYES */
